[package]
name = "bot-logs-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls", "http2"], default-features = false }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }
